2010-07-01  Jaroslav Hajek  <highegg@gmail.com>

	* oct-map.h (octave_scalar_map::assign (const std::string&, const
	octave_value&), octave_map::assign (const std::string&, const Cell&)):
	Backward-compatible aliases for setfield.

2010-07-01  Jaroslav Hajek  <highegg@gmail.com>

	* oct-map.cc (octave_fields::equal_up_to_order (const octave_fields&,
	octave_idx_type *)): New overload.
	(octave_fields::equal_up_to_order (const octave_fields&,
	Array<octave_idx_type>&)): Use it here.
	(octave_map::fast_elem_insert,
	octave_map::fast_elem_extract): New methods.
	* oct-map.h: Update decls.
	* ov-struct.cc (octave_struct::fast_elem_extract,
	octave_struct::fast_elem_insert,
	octave_scalar_struct::fast_elem_insert_self): New methods.
	* ov-struct.h: Update decls.

2010-06-28  Jaroslav Hajek  <highegg@gmail.com>

	* data.cc (single_type_concat): Optimize all scalars case where
	applicable.
	(single_type_concat_map, do_single_type_concat_map): New funcs.
	* pt-mat.cc (get_concat_class): Handle cell and struct concats.


2010-06-25  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/cellfun.cc (Fnum2cell, do_num2cell): Optimize cells
	and structs.

2010-06-25  Jaroslav Hajek  <highegg@gmail.com>

	* ov-struct.h (octave_scalar_struct::resize, octave_struct::resize):
	Don't ignore fill argument.

2010-06-25  Jaroslav Hajek  <highegg@gmail.com>

	* oct-map.h (octave_map::octave_map (const dim_vector&, const
	octave_fields&)): New internal ctor.

	* oct-map.cc (octave_map::assign): Handle no fields case.

2010-06-25  Jaroslav Hajek  <highegg@gmail.com>

	* ov-struct.cc (Fcell2struct): Rewrite.

2010-06-24  Rik <octave@nomad.inbox5.com>

        * octave.cc: Add [FILE] to octave usage string (bug #30258).

2010-06-24  Jaroslav Hajek  <highegg@gmail.com>

	* oct-map.h (octave_map, octave_scalar_map): New classes.
	* oct-map.cc (octave_map, octave_scalar_map): Implement them.
	(Octave_map::Octave_map (const octave_map&)): New ctor.